--- a/package.json
+++ b/package.json
@@ -7,24 +7,27 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test-db": "tsx scripts/test-db-connection.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.17.1 ",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "13.5.6",
-    "prisma": "^6.5.0",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^20.19.22",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^15.2.4",
+    "prisma": "^6.17.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.9.3"
   }
-}
+}  
